// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/Radio/Circle renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "aspectRatio": 1,
      "borderColor": "#FFF",
      "borderRadius": 13.5,
      "borderWidth": 3,
      "width": 27,
    }
  }
/>
`;

exports[`@npm/mobydick-core/Radio/Circle renders correctly selected 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "aspectRatio": 1,
      "borderColor": "#FFF",
      "borderRadius": 13.5,
      "borderWidth": 3,
      "width": 27,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "aspectRatio": 1,
        "backgroundColor": "transparent",
        "borderColor": "rgba(32, 36, 45, 0.3)",
        "borderRadius": 16.5,
        "borderWidth": 3,
        "justifyContent": "center",
        "width": 33,
      }
    }
  />
</View>
`;
